<resources>
    <string name="app_name" translatable="false">ABCore</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_main">Dashboard</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_download_settings">Download Settings</string>
    <string name="title_activity_bitcoinconfedit">Bitcoin Config Edit</string>
    <string name="title_activity_log">Debug Log</string>
    <string name="title_activity_console">Console</string>
    <string name="title_activity_download">Setup Daemon</string>
    <string name="subtitle">Daemon: %1$s</string>
    <string name="status_header">Status: %1$s</string>
    <string name="pref_title_edit_bitcoin_conf">Manually edit bitcoin.conf</string>
    <string name="pref_header_conf">Daemon Settings</string>
    <string name="pref_header_conf_download">Download Configuration</string>
    <string name="pref_header_android">Application Settings</string>
    <string name="title_activity_peer">Peers</string>
    <string name="download_core">The app requires a fullnode daemon to function. Click on one of the buttons to start downloading and configuring the daemon</string>
    <string name="download_core_button">Download Bitcoin Core</string>
    <string name="download_knots_button">Download Bitcoin Knots</string>
    <string name="download_liquid_button">Download Blockstream Liquid</string>
    <string name="failedretry">Failure, want to retry?</string>
    <string name="abis_unsupported">The Application Binary Interfaces supported by this device aren\'t suppored by ABCore: %1$s</string>
    <string name="waitfetchingconfiguring">Please wait. Fetching, unpacking and configuring the daemon&#8230;</string>
    <string name="switchcoreon">Switch ON</string>
    <string name="switchcoreoff">Switch OFF</string>
    <string name="progress_bar_message">Processed %1d%% (block height %2d)</string>
    <string name="action_settings">Settings</string>
    <string name="pref_header_about">About ABCore</string>
    <string name="summary_about">ABCore is an Android app that makes it easy to run Bitcoin Core by acting as a wrapper.</string>
    <string name="source_title">Source Code</string>
    <string name="source_url">http://www.github.com/greenaddress/abcore</string>
    <string name="license_title">License</string>
    <string name="license_url">http://www.opensource.org/licenses/MIT</string>
    <string name="title_version">Version</string>
    <string name="title_contrib">Contributors</string>
    <string name="summary_contrib">Development\n\tLawrence Nahum\n\ttwitter.com/LarryBitcoin\n\nIcon design\n\tOttavio Fontolan\n\totta88.box@gmail.com\n\nSpecial thanks to the Bitcoin Core Dev Team github.com/bitcoin</string>

</resources>
